# opendata_sample

./: .gitignore  Makefile  README.md
backend/: pyproject.toml
backend/cmd/: importer.py  server.py
backend/internal/db/: queries.py  schema.sql
backend/internal/gateway/: app.py  schema.py
backend/internal/gtfs/: importer.py  parser.py
backend/internal/transit/: service.py
backend/proto/transit/v1/: transit.proto
backend/scripts/: gen_proto.sh
frontend/: codegen.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/heatmap/: page.tsx
frontend/src/app/routes/: page.tsx
frontend/src/components/: ApolloWrapper.tsx  HeatmapMap.tsx  RouteList.tsx  RouteMap.tsx  StopStatsPanel.tsx  TimeSlider.tsx
frontend/src/gql/: queries.ts
frontend/src/lib/: apollo.ts
